--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-multimedia-capture": "github:bartmalanczuk/react-multimedia-capture",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12"
   }
